Move post highlights to its own component file. Add download PDF button logic to post. Use CSS variables to detect breakpoints in JS to make sure toggable highlights only works on mobile.

--- a/wp-content/themes/aerospace/sass/base/_base.scss
+++ b/wp-content/themes/aerospace/sass/base/_base.scss
@@ -10,6 +10,19 @@ html {
 
 body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
+	--breakpoint: "xsmall";
+
+	@include breakpoint("small") {
+		--breakpoint: "small";
+	}
+
+	@include breakpoint("medium") {
+		--breakpoint: "medium";
+	}
+
+	@include breakpoint("large") {
+		--breakpoint: "large";
+	}
 
 	&.toggled {
 		& > .site {
