--- a/wp-content/themes/aerospace/sass/components/_post-meta.scss
+++ b/wp-content/themes/aerospace/sass/components/_post-meta.scss
@@ -133,59 +133,3 @@
 		}
 	}
 }
-
-/*----------  Dates & Resource Authors  ----------*/
-.post-event-dates,
-.post-opportunity-deadline,
-.post-publication-date,
-.resource-authors {
-	@extend %post-meta-label;
-	margin-bottom: 0;
-
-	@include breakpoint("medium") {
-		margin-bottom: 1.5rem;
-	}
-
-	.meta-label {
-		@include breakpoint("medium") {
-			display: block;
-		}
-	}
-}
-
-/*----------  More Info  ----------*/
-.post-info-url {
-	margin-top: 1.5rem;
-	
-	a {
-		color: $black;
-		text-transform: uppercase;
-
-		&:hover {
-			color: $black;
-		}
-	}
-}
-
-/*----------  Report  ----------*/
-.post-report {
-	margin-bottom: 1.5rem;
-	@extend %post-meta-label;
-
-	p {
-		margin-bottom: 0;
-	}
-
-	a {
-		color: $black;
-
-		&:hover {
-			color: $secondary-blue;
-		}
-	}
-
-	i {
-		color: $primary-blue;
-	}
-
-}
